# ocl

./: CMakeLists.txt  README.md
cmake/: CreateOpenCLKernelHeader.cmake  cl_to_header.sh  resolve_includes.sh
include/noma/ocl/: config.hpp  config_error.hpp  device_type_list.hpp  helper.hpp  kernel_wrapper.hpp
src/: CMakeLists.txt  ocl_info.cpp
src/noma/ocl/: config.cpp  device_type_list.cpp  helper.cpp  kernel_wrapper.cpp
